[gd_scene load_steps=8 format=3 uid="uid://doswc14c0og5p"]

[ext_resource type="Script" path="res://Scripts/Chart Select/chart_select_menu.gd" id="1_7hymb"]
[ext_resource type="PackedScene" uid="uid://cbakb505pt4ew" path="res://Scenes/Prefabs/chartbutton.tscn" id="2_0n2hu"]
[ext_resource type="Script" path="res://Scripts/Chart Select/chart_creator.gd" id="3_nhrd1"]
[ext_resource type="Script" path="res://Scripts/Chart Select/add_songs_button.gd" id="4_ayqiu"]
[ext_resource type="Script" path="res://Scripts/Chart Editor/editor_ui_button.gd" id="5_2h1nx"]
[ext_resource type="PackedScene" uid="uid://ctuegpkadmebu" path="res://Scenes/Prefabs/status_display.tscn" id="5_jy4dv"]
[ext_resource type="Texture2D" uid="uid://bhmhc47c3unkn" path="res://Graphics Assets/Main Menu/backbutton.png" id="7_vs4ve"]

[node name="ChartSelectMenu" type="Control" node_paths=PackedStringArray("new_chart_button", "create_chart_window", "file_button_container", "chart_button_container", "status_display", "back_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7hymb")
new_chart_button = NodePath("FileAccessBtns/NewChartBtn")
create_chart_window = NodePath("CreateChartWindow")
chart_button_scene = ExtResource("2_0n2hu")
file_button_container = NodePath("FileAccessBtns")
chart_button_container = NodePath("ScrollContainer/ChartBtns")
status_display = NodePath("StatusDisplay")
back_button = NodePath("BackButton")

[node name="ChartCreator" type="Node" parent="." node_paths=PackedStringArray("song_field", "bpm_field", "name_field")]
script = ExtResource("3_nhrd1")
song_field = NodePath("../CreateChartWindow/Panel/VBoxContainer/SongField")
bpm_field = NodePath("../CreateChartWindow/Panel/VBoxContainer/BPMField")
name_field = NodePath("../CreateChartWindow/Panel/VBoxContainer/NameField")

[node name="FileAccessBtns" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 926.0
offset_top = 22.0
offset_right = 1132.0
offset_bottom = 123.0

[node name="AddSongsBtn" type="Button" parent="FileAccessBtns"]
layout_mode = 2
text = "Open Songs Folder"
script = ExtResource("4_ayqiu")
metadata/_edit_lock_ = true

[node name="ReloadSongsBtn" type="Button" parent="FileAccessBtns"]
layout_mode = 2
text = "Reload Songs"
script = ExtResource("5_2h1nx")
metadata/_edit_lock_ = true

[node name="AddChartsBtn" type="Button" parent="FileAccessBtns"]
layout_mode = 2
text = "Open Charts Folder"
script = ExtResource("4_ayqiu")
open_directory = "user://Charts"
metadata/_edit_lock_ = true

[node name="ReloadChartsBtn" type="Button" parent="FileAccessBtns"]
layout_mode = 2
text = "Reload Charts"
script = ExtResource("5_2h1nx")
metadata/_edit_lock_ = true

[node name="NewChartBtn" type="Button" parent="FileAccessBtns"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
text = "Create Chart
"
script = ExtResource("5_2h1nx")
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
offset_right = 905.0
offset_bottom = 646.0

[node name="ChartBtns" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="CreateChartWindow" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -112.0
offset_right = 186.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CreateChartWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CreateChartWindow/Panel"]
layout_mode = 0
offset_left = 76.0
offset_top = 27.0
offset_right = 304.0
offset_bottom = 127.0

[node name="BPMField" type="SpinBox" parent="CreateChartWindow/Panel/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 1.0

[node name="Label" type="Label" parent="CreateChartWindow/Panel/VBoxContainer/BPMField"]
layout_mode = 0
offset_left = -47.0
offset_right = -7.0
offset_bottom = 23.0
text = "BPM:"

[node name="NameField" type="LineEdit" parent="CreateChartWindow/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CreateChartWindow/Panel/VBoxContainer/NameField"]
layout_mode = 0
offset_left = -56.0
offset_top = -1.0
offset_right = -1.0
offset_bottom = 22.0
text = "Name: "

[node name="SongField" type="OptionButton" parent="CreateChartWindow/Panel/VBoxContainer"]
layout_mode = 2
item_count = 1
fit_to_longest_item = false
popup/item_0/text = ""
popup/item_0/id = 0

[node name="Label" type="Label" parent="CreateChartWindow/Panel/VBoxContainer/SongField"]
layout_mode = 0
offset_left = -47.0
offset_top = -3.0
offset_right = -4.0
offset_bottom = 20.0
text = "Song:"

[node name="CreateBtn" type="Button" parent="CreateChartWindow/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -47.0
offset_right = 78.0
offset_bottom = -16.0
grow_vertical = 0
text = "Create"

[node name="CancelBtn" type="Button" parent="CreateChartWindow/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -47.0
offset_right = -18.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "Cancel
"

[node name="StatusDisplay" parent="." instance=ExtResource("5_jy4dv")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -44.0
offset_right = 197.0
offset_bottom = 0.0
grow_vertical = 0

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -165.0
offset_top = -78.0
offset_right = -135.0
offset_bottom = -66.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(5, 5)
texture_normal = ExtResource("7_vs4ve")

[connection signal="chart_initialized" from="ChartCreator" to="." method="select_chart"]
[connection signal="pressed" from="FileAccessBtns/AddSongsBtn" to="FileAccessBtns/AddSongsBtn" method="open_songs_dir"]
[connection signal="pressed" from="FileAccessBtns/ReloadSongsBtn" to="." method="_on_reload_songs_btn_pressed"]
[connection signal="pressed" from="FileAccessBtns/ReloadSongsBtn" to="ChartCreator" method="get_user_audio_streams_in_dir"]
[connection signal="pressed" from="FileAccessBtns/AddChartsBtn" to="FileAccessBtns/AddChartsBtn" method="open_songs_dir"]
[connection signal="pressed" from="FileAccessBtns/ReloadChartsBtn" to="." method="reload_charts"]
[connection signal="pressed" from="FileAccessBtns/NewChartBtn" to="." method="_on_new_chart_btn_pressed"]
[connection signal="pressed" from="FileAccessBtns/NewChartBtn" to="ChartCreator" method="get_user_audio_streams_in_dir"]
[connection signal="pressed" from="CreateChartWindow/Panel/CreateBtn" to="ChartCreator" method="initialize_chart"]
[connection signal="pressed" from="CreateChartWindow/Panel/CancelBtn" to="." method="_on_cancel_btn_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
